--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://unpkg.com/@tonconnect/ui@latest/dist/tonconnect-ui.min.js"></script>
     <script>
         const tonconnectUI = new TON_CONNECT_UI.TonConnectUI({
-            manifestUrl:'tonconnect-manifest.json',
+            manifestUrl:'https://hankgalt1.github.io/Hoary_Efim/tonconnect-manifest.json',
             buttonRootId:'connect'
         });
     </script>
